--- a/gol.html
+++ b/gol.html
@@ -32,11 +32,15 @@
 				var neighbours = 0;
 				for (var coord in cells) {
 					var otherCell = cells[coord];
-					if (otherCell && cell.x != otherCell.x && cell.y != otherCell.y && 
-						Math.abs(cell.x - otherCell.x) <= 1 && Math.abs(cell.y - otherCell.y) <= 1) {
-						neighbours++;
+					if (otherCell && cell.x != otherCell.x && cell.y != otherCell.y) {
+						console.log("C1:" + coord + "- N:" + getCellId(cell) );
+						if(Math.abs(cell.x - otherCell.x) <= 1 && Math.abs(cell.y - otherCell.y) <= 1) {
+							console.log("C2:" + coord + "- N:" + getCellId(cell) );
+							neighbours++;
+						}
 					}
 				}
+				return neighbours;
 			};
 
 			this.tick = function() {
@@ -46,6 +50,7 @@
 					var cell = this.cells[coord];
 					var neighbours = neighbourCount(cell, this.cells);
 					if (neighbours < 2 || neighbours > 3) {
+						console.log("Killing:" + coord + "- N:" + neighbours )
 						cell.kill = true;
 					}
 				}
@@ -79,12 +84,12 @@
 			};
 		};
 
-		var grid = new Grid([{x:5, y:5}, {x:5, y:4}]);
+		var grid = new Grid([{x:5, y:5}, {x:5, y:4}, {x:4,y: 5}]);
 
 		var drawGrid = function(grid) {
 			context.clearRect(0,0,420,420);
-			for (var i = 0; i < grid.cells.length; i++) {
-				var cell = grid.cells[i];
+			for (var coord in grid.cells) {
+				var cell = grid.cells[coord];
 				drawCell(cell.x, cell.y);
 			}
 		}
